--- a/ObjetPython.ipynb
+++ b/ObjetPython.ipynb
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -535,19 +535,16 @@
      "text": [
       "Nom : Ilyass\n",
       "Prénom : Math\n",
-      "Date de naissance : 1 / 7 / 1982\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'nom'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-74-cc446eec6732>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     49\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 51\u001b[1;33m \u001b[0mE\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mEmploye\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Ilyass'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'Math'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mDateNaissance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1982\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7865.548\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     52\u001b[0m \u001b[0mE\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mafficher\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-74-cc446eec6732>\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, Personne, nom, prenom, date, salaire)\u001b[0m\n\u001b[0;32m     33\u001b[0m         \u001b[0mPersonne\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnom\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprenom\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msalaire\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msalaire\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 35\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnom\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPersonne\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnom\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     36\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprenom\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPersonne\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprenom\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPersonne\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'nom'"
+      "Date de naissance : 1 / 7 / 1982\n",
+      "Nom : Ilyass\n",
+      "Prénom : Math\n",
+      "Date de naissance : 1 / 7 / 1983\n",
+      "Salaire : 7865.548\n",
+      "Nom : Ilyass\n",
+      "Prénom : Math\n",
+      "Date de naissance : 1 / 7 / 1983\n",
+      "Salaire : 7865.548\n",
+      "Service : Ressource Humaine\n"
      ]
     }
    ],
@@ -582,28 +579,43 @@
     "        print('Prénom : ' + self.prenom)\n",
     "        print('Date de naissance : ' + self.date.ToString())\n",
     "            \n",
-    "class Employe:\n",
-    "    def __init__(self,Personne,nom='Dupont',prenom='Martin',date=DateNaissance(1,1,1970),salaire=42.0):\n",
-    "        Personne.__init__ (self, nom, prenom, date)\n",
-    "        self.salaire = salaire\n",
-    "        self.nom = Personne.nom\n",
-    "        self.prenom = Personne.prenom\n",
-    "        self.date = Personne.date\n",
+    "class Employe(Personne):\n",
+    "    def __init__(self, nom, prenom, date, salaire):\n",
+    "        self.salaire = salaire \n",
+    "        # appeler __init__ de la classe mère (Personne) \n",
+    "        Personne.__init__(self, nom, prenom, date) \n",
     "        \n",
     "    def afficher(self):\n",
     "        print('Nom : ' + self.nom)\n",
     "        print('Prénom : ' + self.prenom)\n",
     "        print('Date de naissance : ' + self.date.ToString())\n",
-    "        print('Salaire : ' + self.salaire)\n",
+    "        print('Salaire : ' + str(self.salaire))\n",
     "        \n",
+    "            \n",
+    "class Chef(Employe):\n",
+    "    def __init__(self, nom, prenom, date, salaire,service):\n",
+    "        self.service = service \n",
+    "        # appeler __init__ de la classe mère (Personne) \n",
+    "        Employe.__init__(self, nom, prenom, date,salaire) \n",
+    "        \n",
+    "    def afficher(self):\n",
+    "        print('Nom : ' + self.nom)\n",
+    "        print('Prénom : ' + self.prenom)\n",
+    "        print('Date de naissance : ' + self.date.ToString())\n",
+    "        print('Salaire : ' + str(self.salaire))\n",
+    "        print('Service : ' + self.service)\n",
+    "\n",
     "date = DateNaissance(20,4,2020)\n",
     "date.ToString()\n",
+    "\n",
     "P = Personne('Ilyass','Math',DateNaissance(1,7,1982))\n",
     "P.afficher()\n",
     "\n",
+    "E = Employe('Ilyass','Math',DateNaissance(1,7,1983),7865.548)\n",
+    "E.afficher()\n",
     "\n",
-    "E = Employe('Ilyass','Math',DateNaissance(1,7,1982),7865.548)\n",
-    "E.afficher()"
+    "C = Chef('Ilyass','Math',DateNaissance(1,7,1983),7865.548,'Ressource Humaine')\n",
+    "C.afficher()"
    ]
   },
   {
