--- a/DataViz.ipynb
+++ b/DataViz.ipynb
@@ -2702,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2855,7 +2855,7 @@
        "9  [Fresh Tomato Salsa, [Rice, Black Beans, Pinto...     $9.25   "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2882,23 +2882,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4622"
+       "(4622, 6)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Quelle est la taille de notre dataset ?\n",
-    "len(dfResto)"
+    "dfResto.shape"
    ]
   },
   {
@@ -2997,8 +2997,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Combien d’items ont été commandés au total chez Chipotle"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3007,13 +3014,12 @@
        "4972"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Combien d’items ont été commandés au total chez Chipotle\n",
     "sum(dfResto['quantity'])"
    ]
   },
